Pascal/test/cohadar/pascal/errors/undefined_field.pas
program test;
var r: record
			x, y: integer;
	   end;
begin
	r.z := 7;
end.